changed height, position, display for dividers, cardImgs; trying out z-index property to fix display bug.

--- a/index.css
+++ b/index.css
@@ -42,6 +42,7 @@
   justify-content: space-around;
   gap: 5px;
   margin: 0em 5em;
+  z-index: 1;
 }
 
 /* Individual card divs in player hand */
@@ -53,6 +54,7 @@
   display: grid;
   justify-content: center;
   align-items: center;
+  z-index: 1;
 }
 
 #p1 {
@@ -90,35 +92,40 @@
 }
 
 #topDiv {
-  display: grid;
+  display: flex;
   flex-direction: row;
   grid-template-columns: 3;
-  height: 1fr;
-  text-align: space-around;
+  height: 2.6em;
+  text-align: space-between;
+  z-index: 100;
 }
 #middle {
-  display: grid;
+  display: flex;
   flex-direction: row;
   grid-template-columns: 3;
-  height: 1fr;
+  height: 2.6em;
   justify-content: center;
   align-items: space-between;
+  z-index: 100;
 }
 #bottom {
-  display: grid;
+  display: flex;
   flex-direction: row;
   grid-template-columns: 3;
-  height: 1fr;
+  height: 2.6em;
   justify-content: center;
   align-items: space-between;
+  z-index: 100;
 }
 
 /* Card background image */
 .cardImgs {
   display: grid;
   flex-direction: inherit;
-  height: 8em;
-  width: 6em;
+  height: inherit;
+  width: inherit;
+  position: absolute;
+  z-index: 0;
   justify-content: center;
   align-items: center;
 }
@@ -127,6 +134,7 @@
 .arrows {
   display: flex;
   flex-flow: inherit;
+  position: relative;
 }
 
 /* Stat block for each card */
@@ -135,6 +143,7 @@
   flex-flow: inherit;
   justify-content: center;
   align-content: flex-start;
+  z-index: 1;
 }
 
 /* classes for arrow dividers */
